# advent-of-code-2020

./: Dockerfile  docker-compose.yml  pyproject.toml  setup.cfg
Puzzle_01/: main.py
Puzzle_02/: main.py
Puzzle_03/: main.py
Puzzle_04/: main.py
Puzzle_05/: main.py
Puzzle_06/: main.py
Puzzle_07/: main.py
Puzzle_08/: main.py
Puzzle_09/: main.py
Puzzle_1/: main.py  mongo_solution.py
Puzzle_10/: main.py
Puzzle_11/: main.py
Puzzle_12/: main.py
Puzzle_13/: main.py
Puzzle_14/: main.py
