[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Advent of code #1"
authors = ["Tobias Jeppesen <github@tobiasjeppesen.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.1"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
